fixed (inconsequential) typo in Makefile
FORTH -> FOURTH
but since the bootloader is never as large as the fourth bootloader
block size (something like 2k for the m88?) it's irrelevant

but it makes one wonder how much other irrelevant stuff is going on in
this file.

--- a/fastboot-2.9/Makefile
+++ b/fastboot-2.9/Makefile
@@ -150,7 +150,7 @@ ifndef BOOTRST
 	  --cref $+ -o $@ --defsym Application="$$LOADER_START-2"
 else
 	vars="$$(./get_bootsection_addrs.sh $(FLASHEND) $(FIRSTBOOTSTART) \
-                $(SECONDBOOTSTART) $(THIRDBOOTSTART) $(FORTHBOOTSTART))"; \
+                $(SECONDBOOTSTART) $(THIRDBOOTSTART) $(FOURTHBOOTSTART))"; \
 	arch="$$(./get_avr_arch.sh -mmcu=$(MCU) bootload.o)"; \
 	echo "arch=$$arch";\
 	echo "$$vars"; \
